buildscript {
	repositories {
		mavenLocal()
		mavenCentral()
	}
}

def lmfGroup = 'org.logoce.lmf'
def lmfVersion = findProperty('logoceVersion') ?: '0.0.1'

subprojects {

	group = lmfGroup
	version = lmfVersion

	apply plugin: 'java-library'
	apply plugin: 'checkstyle'

	java {
		sourceCompatibility = JavaVersion.VERSION_25
		targetCompatibility = JavaVersion.VERSION_25
	}

	checkstyle {
		toolVersion = '12.2.0'
		configFile = rootProject.file('config/checkstyle/checkstyle.xml')
		ignoreFailures = true
		showViolations = true
	}

	tasks.withType(Checkstyle).configureEach {
		exclude('**/module-info.java')
	}

	repositories {
		mavenLocal()
		mavenCentral()
	}

	afterEvaluate {
		repositories {
			mavenLocal()
			mavenCentral()
		}
	}


}
